tests/fixtures/invalid/bytes_sub_int.py
# Cannot subtract Bytes and Int
x: bytes = b"hello" - 1
